--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+}
+
 html {
   height: 100%;
   box-sizing: border-box;
@@ -5,9 +13,9 @@ html {
 
 body {
   position: relative;
-  min-height: 100%;
-  padding-bottom: 3rem;
+  height: 100%;
   margin: 0;
+  padding: 0;
   background-color: #F8F8FF;
 }
 
@@ -15,22 +23,13 @@ h1, h3, a, p, li, label, .footer {
   font-family: Arial;
 }
 
-.head-section h1 {
-  /*font-size: 1.5em;*/
-  margin-bottom: 0;
-}
-
-.head-section h3 {
-  /*font-size: 1.1em;*/
-  margin-top: 0;
-}
-
-p {
-  margin-top: 5px;
-  line-height: 1.2em;
-}
-
 /* Nav */
+
+nav {
+  margin: 10px 0;
+  display: inline-block;
+  float: right;
+}
 
 #nav {
   list-style: none;
@@ -70,49 +69,169 @@ a.link-color.active {
   color: #7B68EE;
 }
 
+.head-section h1 a:visited {
+  color: #778899;
+}
+
 /* end of Link styling */
+
+.main-container {
+  margin: 0 auto;
+  max-width: 1200px;
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.10);
+  -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.10);
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.10);
+  width: 100%;
+  min-height:100%;
+  position:relative;
+}
+
+.head-section {
+  padding: 30px;
+}
+
+h1 {
+  font-size: 2em;
+}
+
+h3 {
+  font-size: 1.4em;
+  display: inline-block;
+}
+
+img {
+  width: 100%;
+}
+
+.container {
+  padding: 30px 30px 80px 30px;
+}
+
+p, ul {
+  font-size: 1.2em;
+  line-height: 1.2em;
+}
+
+/* home section */
+
+.container.home p:first-child {
+  margin-bottom: 15px;
+}
+
+.container.home h3 {
+  margin-bottom: 15px;
+}
+
+ul {
+  padding-left: 20px;
+  margin-bottom:15px;
+}
+
+/* end of home */
+
+/* about section */
+
+.container.about {
+  margin-top: 50px;
+}
+
+.img-circular{
+  width: 200px;
+  height: 200px;
+  background-image: url('me.jpg');
+  background-size: cover;
+  display: block;
+  border-radius: 200px;
+  -webkit-border-radius: 200px;
+  -moz-border-radius: 200px;
+  margin: 0 auto 30px;
+}
+
+/* end of about */
+
+/* contact section */
+
+.input-section, .textarea-section, .input-fields, .textarea-fields {
+  width: 75%;
+  display: block;
+}
+
+.input-fields, .textarea-fields {
+  outline: 1px solid gray;
+  margin-top: 10px;
+}
+
+.input-fields {
+  height: 30px;
+}
+
+.textarea-fields {
+  height: 80px;
+}
+
+#submit_button {
+  background-color: #f44336;
+  border: none;
+  color: white;
+  display: inline-block;
+  margin-top: 20px;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  width: 20%;
+}
+
+/* end of contact */
 
 .footer {
   position: absolute;
-  right: 0;
   bottom: 0;
-  left: 0;
-  padding: 1rem;
-  background-color: #efefef;
+  width: 100%;
+  height: 40px;
+  background: lightgray;
   text-align: center;
+}
+
+.footer p {
+  font-size: 0.8em;
+  padding-top: 13px;
 }
 
 @media only screen and (min-width : 320px) and (max-width : 480px) {
 
-  body {
-    margin: 0;
-    background-color: #F8F8FF;
-  }
-
   .head-section {
-    padding: 0 10px;
+    text-align: center;
+    padding: 10px;
   }
 
   h1, h3, a, p, li, label, .footer {
     font-family: Arial;
   }
 
-  .head-section h1 {
+  h1 {
     font-size: 1.5em;
     margin-bottom: 0;
   }
 
-  .head-section h3 {
-    font-size: 1.1em;
+  h3 {
+    font-size: 1em;
     margin-top: 0;
+    margin-bottom: 15px;
+    display: inline-block;
   }
 
-  p {
-    margin-top: 5px;
+  p, ul {
+    font-size: 1em;
     line-height: 1.2em;
   }
 
   /* Nav */
+
+  nav {
+    margin-bottom: 10px;
+    display: block;
+    float: none;
+  }
 
   #nav {
     list-style: none;
@@ -153,35 +272,61 @@ a.link-color.active {
     color: #7B68EE;
   }
 
-  /* end of Link styling */
-
   .head-section h1 a:visited {
     color: #778899;
   }
 
-  img {
-    max-width: 100%;
+  /* end of Link styling */
+
+  .main-container {
+    width: 100%;
+    min-height:100%;
+    position:relative;
   }
 
   .container {
-    width: 100%;
+    padding: 10px 10px 40px 10px;
   }
 
-  section.home, section.about, section.contact {
-    padding: 10px;
+  .footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+    background: lightgray;
+    text-align: center;
+  }
+
+  .footer p {
+    font-size: 0.8em;
+    padding-top: 13px;
   }
 
   /* home section */
 
-  section.home p:first-child {
-    margin-top: 0;
+  .container.home p:first-child {
+    margin-bottom: 10px;
   }
 
-  section.home h3 {
-    margin-bottom: 0;
+  .container.home p:last-child {
+    padding-bottom: 30px;
   }
+
+  .container.home h3 {
+    margin-bottom: 10px;
+  }
+
+  ul {
+    margin-bottom:10px;
+  }
+
+  /* end of home */
 
   /* about section */
+
+  .container.about {
+    margin-top: 0;
+  }
 
   .img-circular{
    width: 150px;
@@ -192,14 +337,16 @@ a.link-color.active {
    border-radius: 100px;
    -webkit-border-radius: 100px;
    -moz-border-radius: 100px;
-   margin: 0 auto;
+   margin: 0 auto 20px;
   }
 
   section.about h3 {
     margin-bottom: 0;
   }
 
-  /* Form */
+  /* end of about */
+
+  /* contact section */
 
   .formfield * {
     vertical-align: middle;
@@ -214,8 +361,12 @@ a.link-color.active {
     width: 99%;
   }
 
+  .input-fields, .textarea-fields {
+    outline: 1px solid gray;
+  }
+
   .input-fields {
-    height: 20px;
+    height: 30px;
   }
 
   .textarea-fields {
@@ -231,11 +382,9 @@ a.link-color.active {
     padding: 14px 25px;
     text-align: center;
     text-decoration: none;
-    width: 100%;
+    width: 98%;
   }
 
-  /* end of Form */​
-
-
+  /* end of contact */​
 
 }
